# air-sampling

./: .gitignore  CNAME  README.md  _build.py  add-air-values.py  add-air.bands.py  air-data.txt  air-values.json  citaqs.txt  citaqs_band_pkt.txt  citaqs_pkt.txt  format-air-data.py  generate-dummy-area-data.py  get-air-values.py  index.md  input.json  mappings.json
add-air-values/: lambda_function.py  test.json
conditions/: NO2.yaml  PM10.yaml
dummy/: CO.csv  NO2.csv  O3.csv  PM10.csv  PM2.5.csv  aqi.csv  aqi_lower.csv  bands.json  temp.csv  temp_lower.csv  temp_upper.csv  values.json
dummy-area-data/: aqi_lower.csv  aqi_upper.csv
get-air-values/: lambda_function.py
mappings/: CO.yaml  O3.yaml  api.yaml  aqi.yaml  no2.yaml  pm10.yaml  pm25.yaml  units.yaml
pages/: CO-data.md  NO2-data.md  OZONE-data.md  PM10-data.md  PM2.5-data.md  aqi-data.md  how-is-aqi-defined-here.md  index.md
phoenix-data/: 20250425_phoenix_forBokeh.ipynb  PHOENIX_info.csv  bokeh_plot.html  csv_to_json.py  delete_files.py  main.py  make_data_files.ipynb  make_plot.ipynb  make_plot.py  pyproject.toml
pollutants/: aqi.yaml  co.yaml  ozone.yaml
scripts/: AqiWidget.js  Header.js  LineChart.js  MetricChart.js  MetricWidget.js  PollutantChart.js  aqi-data.js  data.json  fetchCurrData.js  fetchJSON.js  header.js  index.js  initAccordions.js  initAqiChart.js  initAqiData.js  initCurrValues.js  initPollutantCharts.js  initPollutantData.js  initResize.js  main.js  metric-widget.js  pollutant-data.js  resize.js
styles/: style.css
templates/: aqi-data.html  aqi-widget.html  cam-widget.html  (+10 more)
(+77 files in other folders)
