[project]
name = "phoenix-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "panel>=1.6.3",
    "pyproj>=3.7.1",
    "statsmodels>=0.14.4",
]
